# practice

./: .gitignore  README.md
algorithms/elixir/: mix.exs
algorithms/elixir/config/: config.exs
algorithms/elixir/lib/: binary_search.ex
algorithms/elixir/test/: binary_search_test.exs
algorithms/go/: .gitignore  Makefile  go.mod  go.sum
algorithms/go/binarysearch/: binarysearch.go  binarysearch_test.go
algorithms/haskell/: LICENSE  package.yaml
algorithms/haskell/app/: Main.hs
algorithms/haskell/src/: BinarySearch.hs
algorithms/haskell/test/: Spec.hs
algorithms/ruby/: subsets.rb
algorithms/rust/: Cargo.toml
codility/java/binary_gap/: build.gradle  settings.gradle
codility/javascript/odd_occurrences_in_array/: solution.js
codility/scala/: build.sbt
exercism/c/: .gitignore
exercism/clojure/armstrong-numbers/: project.clj
exercism/cpp/leap/: leap.cpp  leap.h
exercism/cpp/two-fer/: two_fer.cpp  (+1 more)
exercism/x86-64-assembly/: .gitignore
hacker_rank/30_Days/: day_1_data_types.py  day_2_operators.py  day_3_conditionals.py  day_4_class_vs_instance.py  day_5_loops.py  day_6_review_loop.py
hacker_rank/functional_programming/haskell-fphr/: LICENSE  README.md  haskell-fphr.cabal
hacker_rank/functional_programming/haskell-fphr/src/: Hello.hs  filter_array.hs  hello_n_times.hs  list_replication.hs
hacker_rank/python/: fatorial.py  find_nth_prime.py  fruits.py  np_linear_algebra.py  python_lists.py  sequences.py  write_a_function.py
hacker_rank/ruby/: .rubocop.yml  Gemfile
javascript/: find_nth_prime.js
project_euler/: 1.py  2.py  euler_2.py
(+174 files in other folders)
