name:                haskell-fphr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/feipero/haskell-fphr#readme
license:             BSD3
license-file:        LICENSE
author:              felipero
maintainer:          felipero@gmail.com
copyright:           2018 felipero
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-fphr
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
